# weather-pipeline

./: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
database/: base.py  db.py  init_db.py  models.py  session.py
notebooks/: pipeline_prototype.ipynb
pipeline/: load.py  main.py  transform.py
src/: extract.ipynb  extract.py  load.py  main.py  pipeline_prototype.ipynb  transform.py
