[project]
name = "weather-pipeline"
version = "0.1.0"
description = "A basic ETL pipeline that pulls data from https://open-meteo.com, transforms the JSON response into a Pandas DataFrame and loads into a PostgreSQL database."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.43",
]
